[gd_scene load_steps=7 format=3 uid="uid://dp6sdxgrjma40"]

[ext_resource type="Texture2D" uid="uid://dslr3ip0cnxp0" path="res://assets/sprites/playerV1.png" id="1_ekvuy"]
[ext_resource type="Script" path="res://scripts/for_scenes/HUD.gd" id="1_ndg1h"]
[ext_resource type="Texture2D" uid="uid://bxevwqt0bicpt" path="res://assets/sprites/sexyIndiDevLogo.png" id="2_cbqub"]
[ext_resource type="PackedScene" uid="uid://p161q7glhm18" path="res://scenes/prefabs/ui_elements/stat_upgrade_ui.tscn" id="4_0nay5"]
[ext_resource type="PackedScene" uid="uid://c05l3ridoi3lc" path="res://scenes/prefabs/ui_elements/pause_menu.tscn" id="5_csnww"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sjnk"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ndg1h")

[node name="PlayerInfo" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 405.0
offset_bottom = 164.0

[node name="MarginContainer" type="MarginContainer" parent="PlayerInfo"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerInfo/MarginContainer"]
layout_mode = 2

[node name="PlayerImage" type="TextureRect" parent="PlayerInfo/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("1_ekvuy")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerInfo/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="Health" type="HBoxContainer" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_8sjnk")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.25
text = "10/10
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
text = "player name"

[node name="Currency" type="HBoxContainer" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CurrencyIcon" type="TextureRect" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer/Currency"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
texture = ExtResource("2_cbqub")
expand_mode = 1

[node name="CurrencyCount" type="Label" parent="PlayerInfo/MarginContainer/HBoxContainer/VBoxContainer/Currency"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
text = "Coins: ?"

[node name="Minimap" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -145.0
offset_bottom = 145.0
grow_horizontal = 0

[node name="StatUpgradeUi" parent="." instance=ExtResource("4_0nay5")]
visible = false
layout_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -85.0
offset_right = 337.0
grow_vertical = 0
text = "Upgrade Menu"

[node name="PauseMenu" parent="." instance=ExtResource("5_csnww")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
